v 1.0.8.4
Changes by mtncat:

Fixed incorrect food advisor message logic
__
Unicorn Utopia
Dark Energy
Fixed zebra catpower bonus being incorrectly calculated with >1 zebras

v 1.0.8.3

Dropbox integration for save import/export

v 1.0.8.2

Faith pool value will now have a correct suffix format
Hissmeowra will now give bonus to the uranium storage

Unobtainium huts price was reduced
Concrete huts price waqs slightly reduced

HM will now be capped by science. (But not much)
Science Vessel will now be capped by titanium.

Manual faith reset will now give a 1% bonus.
Mints will now give a very cosmetic bonus for a gold capacity.

v 1.0.8.1 (11 May)

Price upgrades were slightly nerfed (again)
Most of the hut price upgrades were slightly nerfed

Planet Cracker will now cost more science and alloy
Planet Cracker output was nerfed from 0.5 to 0.35

Everything is nerfed, Dave.

BLS value on UI will be now rounded

Advanced Exogeology

Eludium Huts
Eludium Reflectors
Eludium Cracker (TBD)

Fixed That Issue with the +all craft
Fixed the with faith reset

v 1.0.8.0 (8 May)

Hissmeowra
Research Vessel

Satnav
Tanker's ship price was reduced from 250 to 225

Void Order

Craft +1/+25/+100 will be replaced with +1%/+5%/+10% if possible

v 1.0.7.5 (14 apr)

Changes by xranti:

Various fixes related to effects issues
____

Shift+click will now not display confirm dialog with gamePage.opts.noConfirm

v 1.0.7.4 (13 apr)

Changes by CheezyBob:

Fixed a bug with observatories bonus
___

Council and "make senator" links are now hidden
Rockets were removed from the game
Oil prices of all space missions are increased by 5K
Space missions will not have chance of failure anymore

Elders proc and TC output were slightly nerfed


v 1.0.7.3 (28 mar)

Changes by klusark:

Performance optimisation
Zip compression for save files
Fixed bug with coal calculation

<3
__

Changes by xranti:

Fixed CAD not affecting resource tooltips
No asterisks on unrolled proces
General fixes and tweaks

<3
___
